fix: remove img content-visibility

--- a/packages/client/src/theme/reset.scss
+++ b/packages/client/src/theme/reset.scss
@@ -64,8 +64,6 @@
   img {
     max-width: 100%;
     height: auto;
-    /* Only render when in viewport */
-    content-visibility: auto;
   }
 
   iframe {
